# tmbd-crawler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: crawl.py  discover_decade_counts.py  discover_movie_ids.py  transform.py
src/tmdb_crawler/: config.py  fetcher.py  storage.py  transform.py
