[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmdb-crawler"
version = "0.1.0"
description = "A Python crawler to fetch movie and credit data from TMDb and transform it into Neo4j import CSVs."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "aiohttp",
    "tqdm",
    "requests",
]

[project.urls]
Homepage = "https://github.com/aultimus/tmdb-crawler"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]